--- a/EstateManagement.MerchantAggregate/EstateManagement.MerchantAggregate.csproj
+++ b/EstateManagement.MerchantAggregate/EstateManagement.MerchantAggregate.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net5.0</TargetFramework>
+	  <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared" Version="1.1.7" />
-    <PackageReference Include="Shared.EventStore" Version="1.1.7" />
+    <PackageReference Include="Shared" Version="1.3.1" />
+    <PackageReference Include="Shared.EventStore" Version="1.3.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
   </ItemGroup>
 
   <ItemGroup>
