--- a/EstateManagement.MerchantStatementAggregate/EstateManagement.MerchantStatementAggregate.csproj
+++ b/EstateManagement.MerchantStatementAggregate/EstateManagement.MerchantStatementAggregate.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared.EventStore" Version="1.1.7" />
+    <PackageReference Include="Shared.EventStore" Version="1.3.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
   </ItemGroup>
 
   <ItemGroup>
