--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -6,14 +6,14 @@
 
   <ItemGroup>
     <PackageReference Include="CallbackHandler.DataTransferObjects" Version="1.0.0" />
-    <PackageReference Include="MessagingService.Client" Version="1.1.0" />
+    <PackageReference Include="MessagingService.Client" Version="1.1.1-build3" />
     <PackageReference Include="SecurityService.Client" Version="1.1.0" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.3" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Syncfusion.HtmlToPdfConverter.QtWebKit.Net.Core" Version="20.1.0.58" />
     <PackageReference Include="System.IO.Abstractions" Version="17.0.15" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="1.1.4" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="1.1.4" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="1.1.5-build8" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="1.1.5-build8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
   </ItemGroup>
 
