--- a/EstateManagement.ContractAggregate/EstateManagement.ContractAggregate.csproj
+++ b/EstateManagement.ContractAggregate/EstateManagement.ContractAggregate.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	  <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
-	<PackageReference Include="Shared.EventStore" Version="1.3.1" />
+	<PackageReference Include="Shared.EventStore" Version="1.3.3" />
   </ItemGroup>
 
   <ItemGroup>
