--- a/EstateManagement.Testing/EstateManagement.Testing.csproj
+++ b/EstateManagement.Testing/EstateManagement.Testing.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="EstateReporting.Database" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
