--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="CallbackHandler.DataTransferObjects" Version="1.0.0" />
     <PackageReference Include="MessagingService.Client" Version="1.1.1-build3" />
-    <PackageReference Include="SecurityService.Client" Version="1.1.0" />
+    <PackageReference Include="SecurityService.Client" Version="1.1.1-build9" />
     <PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.3" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Syncfusion.HtmlToPdfConverter.QtWebKit.Net.Core" Version="20.1.0.58" />
