--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
     <PackageReference Include="ClientProxyBase" Version="1.3.3" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.48" />
-    <PackageReference Include="EstateReporting.Database" Version="1.1.2" />
+    <PackageReference Include="EstateReporting.Database" Version="1.1.3-build8" />
     <PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions" Version="22.0.0" />
     <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="22.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
@@ -19,7 +19,7 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.161" />
     <PackageReference Include="NLog" Version="5.0.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="SecurityService.Client" Version="1.1.0" />
+    <PackageReference Include="SecurityService.Client" Version="1.1.1-build9" />
     <PackageReference Include="Shared" Version="1.3.3" />
     <PackageReference Include="Shared.IntegrationTesting" Version="1.3.3" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
