--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -2,26 +2,24 @@
 
   <PropertyGroup>
 	  <TargetFramework>net6.0</TargetFramework>
-
+	  <DebugType>Full</DebugType>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="1.0.0" />
+    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
-    <PackageReference Include="ClientProxyBase" Version="1.3.3" />
+    <PackageReference Include="ClientProxyBase" Version="1.3.7" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.48" />
-    <PackageReference Include="EstateReporting.Database" Version="1.1.3-build8" />
-    <PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions" Version="22.0.0" />
-    <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="22.0.0" />
+    <PackageReference Include="EstateReporting.Database" Version="1.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.161" />
     <PackageReference Include="NLog" Version="5.0.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="SecurityService.Client" Version="1.1.1-build9" />
-    <PackageReference Include="Shared" Version="1.3.3" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="1.3.3" />
+    <PackageReference Include="SecurityService.Client" Version="1.1.1" />
+    <PackageReference Include="Shared" Version="1.3.7" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="1.3.7" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
@@ -49,6 +47,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="certs\ca\ca.crt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="certs\ca\ca.key">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="certs\node1\node.crt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="certs\node1\node.key">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
