--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -55,6 +55,12 @@ jobs:
     - name: Run Integration Tests
       run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj"
 
+    - uses: actions/upload-artifact@v2
+      if: ${{ failure() }}
+      with:
+        name: tracelogs
+        path: /home/txnproc/trace/   
+
     - uses: nashmaniac/create-issue-action@v1.1
       if: ${{ failure() }}
       name: Create an issue on build failure
