--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="CallbackHandler.DataTransferObjects" Version="1.0.2" />
     <PackageReference Include="EventStoreProjections" Version="1.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
-    <PackageReference Include="ClientProxyBase" Version="1.3.8" />
+    <PackageReference Include="ClientProxyBase" Version="1.4.0-beta1" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.48" />
     <PackageReference Include="EstateReporting.Database" Version="1.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
@@ -19,8 +19,8 @@
     <PackageReference Include="NLog" Version="5.0.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="SecurityService.Client" Version="1.1.1" />
-    <PackageReference Include="Shared" Version="1.3.8" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="1.3.8" />
+    <PackageReference Include="Shared" Version="1.4.0-beta1" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="1.4.0-beta1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
