--- a/EstateManagement.IntegrationTests/EstateManagement - Backup.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement - Backup.IntegrationTests.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="SecurityService.Client" Version="1.1.1" />
     <PackageReference Include="Shared" Version="1.4.0" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="1.4.0" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="1.4.0-beta2" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
