Net 7 update Ready for PR

--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net6.0</TargetFramework>
+	  <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
-    <PackageReference Include="Shared" Version="1.5.0-beta6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
+    <PackageReference Include="Shared" Version="1.5.0" />
     <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="1.1.13-build28" />
     <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="1.1.13-build28" />
     <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="1.1.13-build28" />
