--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net6.0</TargetFramework>
+	  <TargetFramework>net7.0</TargetFramework>
 	  <DebugType>Full</DebugType>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -9,19 +9,19 @@
   <ItemGroup>
     <PackageReference Include="CallbackHandler.DataTransferObjects" Version="1.0.3" />
     <PackageReference Include="EventStoreProjections" Version="1.0.13" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
-    <PackageReference Include="ClientProxyBase" Version="1.5.0-beta6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
+    <PackageReference Include="ClientProxyBase" Version="1.5.0" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.57" />
     <PackageReference Include="EstateReporting.Database" Version="1.1.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.161" />
-    <PackageReference Include="NLog" Version="5.0.0" />
-    <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="NLog" Version="5.0.5" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.0.5" />
     <PackageReference Include="SecurityService.Client" Version="1.1.1" />
-    <PackageReference Include="Shared" Version="1.5.0-beta6" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="1.5.0-beta6" />
-    <PackageReference Include="Shouldly" Version="4.0.3" />
+    <PackageReference Include="Shared" Version="1.5.0" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="1.5.0" />
+    <PackageReference Include="Shouldly" Version="4.1.0" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.74" />
