--- a/EstateManagement.MerchantStatementAggregate/EstateManagement.MerchantStatementAggregate.csproj
+++ b/EstateManagement.MerchantStatementAggregate/EstateManagement.MerchantStatementAggregate.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Grpc.Net.Client" Version="2.47.0" />
-    <PackageReference Include="Shared.EventStore" Version="1.5.0-beta6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
+    <PackageReference Include="Shared.EventStore" Version="1.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
