--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -50,11 +50,11 @@ jobs:
         npm i lcov-result-merger
         ./node_modules/lcov-result-merger/bin/lcov-result-merger.js '*.info' 'lcov.info' 
 
-    - name: Upload Code Coverage
-      uses: coverallsapp/github-action@master
-      with:
-          github-token: ${{ secrets.github_token }}
-          path-to-lcov: lcov.info    
+    #- name: Upload Code Coverage
+    #  uses: coverallsapp/github-action@master
+    #  with:
+    #      github-token: ${{ secrets.github_token }}
+    #      path-to-lcov: lcov.info    
 
     - name: Build Docker Image
       run: docker build . --file EstateManagement/Dockerfile --tag estatemanagement:latest
@@ -68,11 +68,11 @@ jobs:
         name: tracelogs
         path: /home/txnproc/trace/   
 
-    - uses: nashmaniac/create-issue-action@v1.1
-      if: ${{ failure() }}
-      name: Create an issue on build failure
-      with:
-        title: Investigate Nightly Build Failure
-        token: ${{secrets.GITHUB_TOKEN}}
-        labels: nightlybuild
-        body: Url is ${{env.action_url}}
+    #- uses: nashmaniac/create-issue-action@v1.1
+    #  if: ${{ failure() }}
+    #  name: Create an issue on build failure
+    #  with:
+    #    title: Investigate Nightly Build Failure
+    #    token: ${{secrets.GITHUB_TOKEN}}
+    #    labels: nightlybuild
+    #    body: Url is ${{env.action_url}}
