--- a/EstateManagement.BusinessLogic.Tests/EstateManagement.BusinessLogic.Tests.csproj
+++ b/EstateManagement.BusinessLogic.Tests/EstateManagement.BusinessLogic.Tests.csproj
@@ -13,7 +13,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="Moq" Version="4.18.1" />
-    <PackageReference Include="Shared.EventStore" Version="1.5.1" />
+    <PackageReference Include="Shared.EventStore" Version="2022.12.0-beta3" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="17.0.15" />
