--- a/EstateManagement.EstateAggregate/EstateManagement.EstateAggregate.csproj
+++ b/EstateManagement.EstateAggregate/EstateManagement.EstateAggregate.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.Net.Client" Version="2.47.0" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.5.1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2022.12.0-beta3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
-    <PackageReference Include="Shared.EventStore" Version="1.5.1" />
+    <PackageReference Include="Shared.EventStore" Version="2022.12.0-beta3" />
   </ItemGroup>
 
   <ItemGroup>
