--- a/EstateManagement.Merchant.DomainEvents/EstateManagement.Merchant.DomainEvents.csproj
+++ b/EstateManagement.Merchant.DomainEvents/EstateManagement.Merchant.DomainEvents.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.5.1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2022.12.0-beta3" />
   </ItemGroup>
 
 </Project>
