--- a/EstateManagement.MerchantStatementAggregate/EstateManagement.MerchantStatementAggregate.csproj
+++ b/EstateManagement.MerchantStatementAggregate/EstateManagement.MerchantStatementAggregate.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.Net.Client" Version="2.47.0" />
-    <PackageReference Include="Shared.EventStore" Version="1.5.1" />
+    <PackageReference Include="Shared.EventStore" Version="2022.12.0-beta3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
   </ItemGroup>
 
