--- a/EstateManagement.BusinessLogic.Tests/EstateManagement.BusinessLogic.Tests.csproj
+++ b/EstateManagement.BusinessLogic.Tests/EstateManagement.BusinessLogic.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	  <TargetFramework>net7.0</TargetFramework>
-    <DebugType>None</DebugType>
+    <DebugType>Full</DebugType>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Lamar" Version="8.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="Shared.EventStore" Version="2022.12.0-beta4" />
@@ -27,6 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\EstateManagement.BusinessLogic\EstateManagement.BusinessLogic.csproj" />
     <ProjectReference Include="..\EstateManagement.Testing\EstateManagement.Testing.csproj" />
+    <ProjectReference Include="..\EstateManagement\EstateManagement.csproj" />
   </ItemGroup>
 
   <ItemGroup>
