Nuget updates and missing migration from last PR

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -25,6 +25,7 @@
         }
       ]
     },
+    "DatabaseEngine": "MySql",
     "ClientId": "serviceClient",
     "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
     "EventHandlerConfiguration": {
@@ -205,7 +206,7 @@
       "StatementGeneratedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.StatementDomainEventHandler, EstateManagement.BusinessLogic",
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler, EstateManagement.BusinessLogic"
-        
+
       ]
     },
     "EventHandlerConfigurationOrdered": {
