--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -5,18 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="1.0.3" />
-    <PackageReference Include="MessagingService.Client" Version="1.1.4" />
-    <PackageReference Include="SecurityService.Client" Version="1.1.1" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="2022.12.2" />
+    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2022.12.2-build31" />
+    <PackageReference Include="MessagingService.Client" Version="2022.12.2-build35" />
+    <PackageReference Include="SecurityService.Client" Version="2022.12.2-build34" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2023.1.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Syncfusion.HtmlToPdfConverter.QtWebKit.Net.Core" Version="20.1.0.58" />
     <PackageReference Include="System.IO.Abstractions" Version="17.0.15" />
-    <PackageReference Include="TransactionProcessor.Client" Version="2022.12.0" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="1.1.13-build28" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="1.1.13-build28" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2022.12.3-build48" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2022.12.3-build48" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2022.12.3-build48" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="1.1.13-build28" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2022.12.3-build48" />
   </ItemGroup>
 
   <ItemGroup>
