--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -7,25 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="1.0.3" />
-    <PackageReference Include="EventStoreProjections" Version="1.0.13" />
+    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2022.12.2-build31" />
+    <PackageReference Include="EventStoreProjections" Version="2022.12.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
-    <PackageReference Include="ClientProxyBase" Version="2022.12.2" />
+    <PackageReference Include="ClientProxyBase" Version="2023.1.0" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.57" />
-    <PackageReference Include="EstateReporting.Database" Version="1.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.161" />
     <PackageReference Include="NLog" Version="5.0.5" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.5" />
-    <PackageReference Include="SecurityService.Client" Version="1.1.1" />
-    <PackageReference Include="Shared" Version="2022.12.2" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2022.12.2" />
+    <PackageReference Include="SecurityService.Client" Version="2022.12.2-build34" />
+    <PackageReference Include="Shared" Version="2023.1.0" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2023.1.0" />
     <PackageReference Include="Shouldly" Version="4.1.0" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.74" />
-    <PackageReference Include="TransactionProcessor.Client" Version="1.1.13-build28" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2022.12.3-build48" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
@@ -39,6 +38,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EstateManagement.Client\EstateManagement.Client.csproj" />
+    <ProjectReference Include="..\EstateManagement.Database\EstateManagement.Database.csproj" />
     <ProjectReference Include="..\EstateManagement.DataTransferObjects\EstateManagement.DataTransferObjects.csproj" />
   </ItemGroup>
 
