Handle new settlement event

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -191,6 +191,9 @@
       "SettlementCompletedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.SettlementDomainEventHandler, EstateManagement.BusinessLogic"
       ],
+      "SettlementProcessingStartedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.SettlementDomainEventHandler, EstateManagement.BusinessLogic"
+      ],
 
       // Merchant Statement Domain Event Handler
       "StatementCreatedEvent": [
