--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -9,10 +9,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
     <PackageReference Include="Shared" Version="2023.6.1" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2023.6.2" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2023.6.2" />
-    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2023.6.2" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2023.6.2" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2023.6.4-build59" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2023.6.4-build59" />
+    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2023.6.4-build59" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2023.6.4-build59" />
     <PackageReference Include="FileProcessor.File.DomainEvents" Version="2023.6.1" />
     <PackageReference Include="FileProcessor.FileImportLog.DomainEvents" Version="2023.6.1" />
   </ItemGroup>
