--- a/EstateManagement/EstateManagement.csproj
+++ b/EstateManagement/EstateManagement.csproj
@@ -43,7 +43,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2023.6.2" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2023.6.4-build59" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.1" />
   </ItemGroup>
 
