Store last sale date time with merchant

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -94,7 +94,8 @@
         "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler, EstateManagement.BusinessLogic"
       ],
       "TransactionHasBeenCompletedEvent": [
-        "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler, EstateManagement.BusinessLogic"
+        "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler, EstateManagement.BusinessLogic",
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
       ],
       "ProductDetailsAddedToTransactionEvent": [
         "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler, EstateManagement.BusinessLogic"
