--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -70,6 +70,9 @@
       "CallbackReceivedEnrichedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
       ],
+      "ContractAddedToMerchantEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
 
       // Transaction Domain Event Handler
       "TransactionHasStartedEvent": [
