--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -179,6 +179,17 @@
         "EstateManagement.BusinessLogic.EventHandling.FileProcessorDomainEventHandler, EstateManagement.BusinessLogic"
       ],
 
+      // Float Domain Event Handler
+      "FloatCreatedForContractProductEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.FloatEventHandler, EstateManagement.BusinessLogic"
+      ],
+      "FloatCreditPurchasedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.FloatEventHandler, EstateManagement.BusinessLogic"
+      ],
+      "FloatDecreasedByTransactionEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.FloatEventHandler, EstateManagement.BusinessLogic"
+      ],
+
       // Settlement Domain Event Handler
       "SettlementCreatedForDateEvent": [
         "EstateManagement.BusinessLogic.EventHandling.SettlementDomainEventHandler, EstateManagement.BusinessLogic"
