--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -181,13 +181,13 @@
 
       // Float Domain Event Handler
       "FloatCreatedForContractProductEvent": [
-        "EstateManagement.BusinessLogic.EventHandling.FloatEventHandler, EstateManagement.BusinessLogic"
+        "EstateManagement.BusinessLogic.EventHandling.FloatDomainEventHandler, EstateManagement.BusinessLogic"
       ],
       "FloatCreditPurchasedEvent": [
-        "EstateManagement.BusinessLogic.EventHandling.FloatEventHandler, EstateManagement.BusinessLogic"
+        "EstateManagement.BusinessLogic.EventHandling.FloatDomainEventHandler, EstateManagement.BusinessLogic"
       ],
       "FloatDecreasedByTransactionEvent": [
-        "EstateManagement.BusinessLogic.EventHandling.FloatEventHandler, EstateManagement.BusinessLogic"
+        "EstateManagement.BusinessLogic.EventHandling.FloatDomainEventHandler, EstateManagement.BusinessLogic"
       ],
 
       // Settlement Domain Event Handler
