--- a/EstateManagement.EstateAggregate/EstateManagement.EstateAggregate.csproj
+++ b/EstateManagement.EstateAggregate/EstateManagement.EstateAggregate.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net7.0</TargetFramework>
+	  <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.Net.Client" Version="2.53.0" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="2024.3.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
-    <PackageReference Include="Shared.EventStore" Version="2024.3.3" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.62.0-pre1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2024.4.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
+    <PackageReference Include="Shared.EventStore" Version="2024.4.2" />
   </ItemGroup>
 
   <ItemGroup>
