--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net7.0</TargetFramework>
+	  <TargetFramework>net8.0</TargetFramework>
 	  <DebugType>None</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
-    <PackageReference Include="Shared" Version="2024.3.3" />
-    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.3.3-build94" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.3.3-build94" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.3.3-build94" />
-    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2024.3.3-build94" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.3.3-build94" />
-    <PackageReference Include="FileProcessor.File.DomainEvents" Version="2023.12.2-build51" />
-    <PackageReference Include="FileProcessor.FileImportLog.DomainEvents" Version="2023.12.2-build51" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
+    <PackageReference Include="Shared" Version="2024.4.2" />
+    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.3.3" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.3.3" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.3.3" />
+    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2024.3.3" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.3.3" />
+    <PackageReference Include="FileProcessor.File.DomainEvents" Version="2024.3.1" />
+    <PackageReference Include="FileProcessor.FileImportLog.DomainEvents" Version="2024.3.1" />
   </ItemGroup>
 
   <ItemGroup>
