Update merchant name and settlement schedule added

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -73,6 +73,9 @@
       "ContractAddedToMerchantEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
       ],
+      "MerchantNameUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
 
       // Transaction Domain Event Handler
       "TransactionHasStartedEvent": [
