Merchant update events handled at Read Model and added integration test

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -61,7 +61,13 @@
       "DeviceAddedToMerchantEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler, EstateManagement.BusinessLogic"
       ],
+      "DeviceSwappedForMerchantEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler, EstateManagement.BusinessLogic"
+      ],
       "OperatorAssignedToMerchantEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler, EstateManagement.BusinessLogic"
+      ],
+      "OperatorRemovedFromMerchantEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler, EstateManagement.BusinessLogic"
       ],
       "SettlementScheduleChangedEvent": [
@@ -73,7 +79,43 @@
       "ContractAddedToMerchantEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
       ],
+      "ContractRemovedFromMerchantEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
       "MerchantNameUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantAddressLine1UpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantAddressLine2UpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantAddressLine3UpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantAddressLine4UpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantCountyUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantRegionUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantTownUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantPostalCodeUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantContactNameUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantContactEmailAddressUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantContactPhoneNumberUpdatedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
       ],
 
