WIP Estate Refactoring

--- a/EstateManagement.DataTransferObjects/EstateManagement.DataTransferObjects.csproj
+++ b/EstateManagement.DataTransferObjects/EstateManagement.DataTransferObjects.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <Folder Include="Requests\Common\" />
+    <Folder Include="Requests\Operator\" />
   </ItemGroup>
 
 </Project>
