--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\EstateManagement.MerchantDepositAggregate\EstateManagement.MerchantDepositListAggregate.csproj" />
     <ProjectReference Include="..\EstateManagement.MerchantStatementAggregate\EstateManagement.MerchantStatementAggregate.csproj" />
     <ProjectReference Include="..\EstateManagement.Models\EstateManagement.Models.csproj" />
+    <ProjectReference Include="..\EstateManagement.OperatorAggregate\EstateManagement.OperatorAggregate.csproj" />
     <ProjectReference Include="..\EstateManagement.Repository\EstateManagement.Repository.csproj" />
   </ItemGroup>
 
