estate command handing refactored for add/update

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -28,6 +28,10 @@
     "ClientId": "serviceClient",
     "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
     "EventHandlerConfiguration": {
+      // Opaerator Domain Event Handler
+      "OperatorCreatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.OperatorDomainEventHandler, EstateManagement.BusinessLogic"
+      ],
       // Estate Domain Event Handler
       "EstateCreatedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.EstateDomainEventHandler, EstateManagement.BusinessLogic"
