--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\EstateManagement.Merchant.DomainEvents\EstateManagement.Merchant.DomainEvents.csproj" />
     <ProjectReference Include="..\EstateManagement.MerchantStatement.DomainEvents\EstateManagement.MerchantStatement.DomainEvents.csproj" />
     <ProjectReference Include="..\EstateManagement.Models\EstateManagement.Models.csproj" />
+    <ProjectReference Include="..\EstateManagement.Operator.DomainEvents\EstateManagement.Operator.DomainEvents.csproj" />
   </ItemGroup>
 
 </Project>
