read model updates

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -32,6 +32,15 @@
       "OperatorCreatedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.OperatorDomainEventHandler, EstateManagement.BusinessLogic"
       ],
+      "OperatorNameUpdatedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.OperatorDomainEventHandler, EstateManagement.BusinessLogic"
+      ],
+      "OperatorRequireCustomMerchantNumberChangedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.OperatorDomainEventHandler, EstateManagement.BusinessLogic"
+      ],
+      "OperatorRequireCustomTerminalNumberChangedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.OperatorDomainEventHandler, EstateManagement.BusinessLogic"
+      ],
       // Estate Domain Event Handler
       "EstateCreatedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.EstateDomainEventHandler, EstateManagement.BusinessLogic"
