--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -1,4 +1,22 @@
 {
+  "Logging": {
+    "IncludeScopes": false,
+    // this is logged to the output window in VS (also logged to /var/log/messages in linux)
+    // this is what is logged to the console window
+    "Console": {
+      "LogLevel": {
+        // you can control logging by namespace
+        "Microsoft": "Warning",
+        "System": "Warning",
+        // this is what can be logged by our app for Console window
+        "Default": "Warning"
+      }
+    },
+    // general level for all other logging (nlog etc)
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
   "AppSettings": {
     "SubscriptionConfiguration": {
       "InternalSubscriptionService": "true",
@@ -25,6 +43,7 @@
         }
       ]
     },
+    "LogRequests": true,
     "ClientId": "serviceClient",
     "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
     "EventHandlerConfiguration": {
