--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -5,19 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2024.2.2-build50" />
-    <PackageReference Include="MessagingService.Client" Version="2024.3.2-build54" />
-    <PackageReference Include="SecurityService.Client" Version="2024.3.1" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="2024.6.4" />
+    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2024.4.2" />
+    <PackageReference Include="MessagingService.Client" Version="2024.4.2" />
+    <PackageReference Include="SecurityService.Client" Version="2024.5.1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2024.7.1" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Syncfusion.HtmlToPdfConverter.QtWebKit.Net.Core" Version="25.1.35" />
     <PackageReference Include="System.IO.Abstractions" Version="21.0.2" />
-    <PackageReference Include="TransactionProcessor.Client" Version="2024.3.3" />
-    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.3.3" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.3.3" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.3.3" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2024.6.2" />
+    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.6.2" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.6.2" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.6.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.3.3" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.6.2" />
   </ItemGroup>
 
   <ItemGroup>
