--- a/EstateManagement/nlog.config
+++ b/EstateManagement/nlog.config
@@ -22,13 +22,13 @@
 	</targets>
 
 	<rules>
-		<logger name="Microsoft.*" minlevel="Debug" writeTo="" final="true" />
-		<logger name="*" minlevel="Debug" writeTo="logfile">
+		<logger name="Microsoft.*" minlevel="Warn" writeTo="" final="true" />
+		<logger name="*" minlevel="Warn" writeTo="logfile">
 			<filters defaultAction="Log">
 				<when condition="contains('${message}', 'HEALTH_CHECK')" action="Ignore"></when>
 			</filters>
 		</logger>
-		<logger name="*" minlevel="Debug" writeTo="healthlogfile">
+		<logger name="*" minlevel="Warn" writeTo="healthlogfile">
 			<filters defaultAction="Ignore">
 				<when condition="contains('${message}', 'HEALTH_CHECK')" action="Log"></when>
 			</filters>
